--- a/TENHME/Application/LoginScreen/View/LoginSB.storyboard
+++ b/TENHME/Application/LoginScreen/View/LoginSB.storyboard
@@ -1,28 +1,150 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17150" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="23504" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Y6W-OH-hqX">
+    <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17122"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="23506"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--LoginVC-->
         <scene sceneID="s0d-6b-0kx">
             <objects>
-                <viewController id="Y6W-OH-hqX" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="LoginVC" id="Y6W-OH-hqX" customClass="LoginVC" customModule="TENHME" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="5EZ-qb-Rvc">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="TopImageLogin" translatesAutoresizingMaskIntoConstraints="NO" id="ZW7-Hw-Zom">
+                                <rect key="frame" x="0.0" y="-6" width="393" height="374"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="393" id="8Fd-b6-c0H"/>
+                                    <constraint firstAttribute="height" constant="374" id="t5a-5N-rft"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Get your groceries with TENHME" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LsS-J0-MNw">
+                                <rect key="frame" x="24" y="393" width="222" height="62.333333333333314"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="222" id="6tf-BK-jOZ"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="26"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="korea flage" translatesAutoresizingMaskIntoConstraints="NO" id="glM-XU-afh">
+                                <rect key="frame" x="24" y="487" width="34" height="23"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="34" id="3Ak-d3-nKZ"/>
+                                    <constraint firstAttribute="height" constant="23" id="cpA-UK-taV"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="+82" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="geJ-bh-89e">
+                                <rect key="frame" x="69" y="487" width="42" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="42" id="fQE-ty-2zH"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="zXV-0m-TNB">
+                                <rect key="frame" x="111" y="479" width="251" height="36"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="36" id="88T-vg-j2T"/>
+                                    <constraint firstAttribute="width" constant="251" id="Yb9-60-hBB"/>
+                                </constraints>
+                                <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
+                                <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" keyboardType="numberPad" keyboardAppearance="light" smartDashesType="no" smartInsertDeleteType="no" smartQuotesType="no" textContentType="tel"/>
+                            </textField>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2d2-hC-w3d">
+                                <rect key="frame" x="69" y="523" width="308" height="1"/>
+                                <color key="backgroundColor" name="EBF0F7"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="308" id="u2h-CF-rTN"/>
+                                    <constraint firstAttribute="height" constant="1" id="xb2-pb-GIl"/>
+                                </constraints>
+                            </view>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Or connect with social media" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="p3Z-bY-hhD">
+                                <rect key="frame" x="0.0" y="556" width="393" height="25"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="25" id="4hh-AR-AWw"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="14"/>
+                                <color key="textColor" red="0.51098328829999995" green="0.5109833479" blue="0.51098328829999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="google" translatesAutoresizingMaskIntoConstraints="NO" id="aqf-jN-krX">
+                                <rect key="frame" x="24" y="612" width="345" height="65"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="65" id="ggB-qK-PFH"/>
+                                </constraints>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerAllRadius">
+                                        <real key="value" value="19"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="facebook" translatesAutoresizingMaskIntoConstraints="NO" id="XOQ-AP-jx7">
+                                <rect key="frame" x="24" y="698" width="345" height="65"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="65" id="Kue-dt-Ajr"/>
+                                </constraints>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerAllRadius">
+                                        <real key="value" value="19"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                            </imageView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="2d2-hC-w3d" firstAttribute="top" secondItem="zXV-0m-TNB" secondAttribute="bottom" constant="8" symbolic="YES" id="4Fj-H0-11J"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="XOQ-AP-jx7" secondAttribute="trailing" constant="24" id="8R2-WL-g1S"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="zXV-0m-TNB" secondAttribute="trailing" constant="31" id="E97-E5-vvR"/>
+                            <constraint firstItem="ZW7-Hw-Zom" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="FmG-Zk-U4j"/>
+                            <constraint firstItem="2d2-hC-w3d" firstAttribute="leading" secondItem="5EZ-qb-Rvc" secondAttribute="leadingMargin" constant="53" id="Jit-l2-QSX"/>
+                            <constraint firstItem="p3Z-bY-hhD" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="Nls-BB-vL0"/>
+                            <constraint firstItem="XOQ-AP-jx7" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="24" id="Oas-aP-cuI"/>
+                            <constraint firstItem="LsS-J0-MNw" firstAttribute="top" secondItem="ZW7-Hw-Zom" secondAttribute="bottom" constant="25" id="Pli-el-dOr"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="aqf-jN-krX" secondAttribute="trailing" constant="24" id="QoL-NX-EH5"/>
+                            <constraint firstItem="aqf-jN-krX" firstAttribute="top" secondItem="p3Z-bY-hhD" secondAttribute="bottom" constant="31" id="Ul6-Q0-02j"/>
+                            <constraint firstItem="p3Z-bY-hhD" firstAttribute="top" secondItem="2d2-hC-w3d" secondAttribute="bottom" constant="32" id="Vqi-p7-ZaN"/>
+                            <constraint firstItem="aqf-jN-krX" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="24" id="acQ-Td-4KE"/>
+                            <constraint firstItem="2d2-hC-w3d" firstAttribute="trailing" secondItem="5EZ-qb-Rvc" secondAttribute="trailingMargin" id="egI-S7-YpM"/>
+                            <constraint firstItem="XOQ-AP-jx7" firstAttribute="top" secondItem="aqf-jN-krX" secondAttribute="bottom" constant="21" id="grU-ab-7yu"/>
+                            <constraint firstItem="LsS-J0-MNw" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="24" id="iA9-c8-WNQ"/>
+                            <constraint firstItem="p3Z-bY-hhD" firstAttribute="trailing" secondItem="vDu-zF-Fre" secondAttribute="trailing" id="jMB-wv-GYJ"/>
+                            <constraint firstItem="ZW7-Hw-Zom" firstAttribute="top" secondItem="5EZ-qb-Rvc" secondAttribute="top" constant="-6" id="kRN-MX-TbE"/>
+                            <constraint firstItem="zXV-0m-TNB" firstAttribute="leading" secondItem="geJ-bh-89e" secondAttribute="trailing" id="oc8-5D-mHK"/>
+                            <constraint firstItem="geJ-bh-89e" firstAttribute="leading" secondItem="glM-XU-afh" secondAttribute="trailing" constant="11" id="pRX-FJ-wjA"/>
+                            <constraint firstItem="ZW7-Hw-Zom" firstAttribute="trailing" secondItem="vDu-zF-Fre" secondAttribute="trailing" id="pqf-YL-BLR"/>
+                            <constraint firstItem="geJ-bh-89e" firstAttribute="top" secondItem="glM-XU-afh" secondAttribute="top" id="qUR-JM-Wcu"/>
+                            <constraint firstItem="XOQ-AP-jx7" firstAttribute="top" secondItem="aqf-jN-krX" secondAttribute="bottom" constant="21" id="tw7-Mp-XDt"/>
+                            <constraint firstItem="glM-XU-afh" firstAttribute="top" secondItem="LsS-J0-MNw" secondAttribute="bottom" constant="31.670000000000002" id="wn3-vy-XFT"/>
+                            <constraint firstItem="glM-XU-afh" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="24" id="y4h-tv-7PF"/>
+                            <constraint firstItem="zXV-0m-TNB" firstAttribute="top" secondItem="geJ-bh-89e" secondAttribute="top" constant="-8" id="zXc-Ru-an0"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="138.1679389312977" y="-2.1126760563380285"/>
         </scene>
     </scenes>
     <resources>
+        <image name="TopImageLogin" width="1241" height="1122"/>
+        <image name="facebook" width="1092" height="202"/>
+        <image name="google" width="1092" height="202"/>
+        <image name="korea flage" width="124" height="93"/>
+        <namedColor name="EBF0F7">
+            <color red="0.92156862745098034" green="0.94117647058823528" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
