--- a/TENHME/Application/LoginScreen/View/XipFile/TitleLoginTableViewCell.xib
+++ b/TENHME/Application/LoginScreen/View/XipFile/TitleLoginTableViewCell.xib
@@ -1,21 +1,42 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="23504" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="23506"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="TitleLoginTableViewCell" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+        <tableViewCell contentMode="scaleToFill" restorationIdentifier="TitleLoginTableViewCell" selectionStyle="default" indentationWidth="10" rowHeight="225" id="KGk-i7-Jjw" customClass="TitleLoginTableViewCell" customModule="TENHME" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="405" height="225"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                <rect key="frame" x="0.0" y="0.0" width="405" height="225"/>
                 <autoresizingMask key="autoresizingMask"/>
+                <subviews>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="korea flage" translatesAutoresizingMaskIntoConstraints="NO" id="gzs-yc-UOY">
+                        <rect key="frame" x="82" y="40" width="240" height="128"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="128" id="4hZ-d6-pcu"/>
+                            <constraint firstAttribute="width" constant="240" id="HN3-6P-x6b"/>
+                        </constraints>
+                    </imageView>
+                </subviews>
+                <constraints>
+                    <constraint firstAttribute="bottom" secondItem="gzs-yc-UOY" secondAttribute="bottom" constant="57" id="Gwo-fk-FQe"/>
+                    <constraint firstItem="gzs-yc-UOY" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="40" id="Rbg-SH-FSe"/>
+                    <constraint firstAttribute="trailing" secondItem="gzs-yc-UOY" secondAttribute="trailing" constant="83" id="ZAN-V1-ZAM"/>
+                    <constraint firstItem="gzs-yc-UOY" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="82" id="uED-uO-SzV"/>
+                </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
+            <point key="canvasLocation" x="203.81679389312976" y="83.450704225352112"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <image name="korea flage" width="124" height="93"/>
+    </resources>
 </document>
