--- a/TENHME/Application/LoginScreen/View/XipFile/TopImageLoginTableViewCell.xib
+++ b/TENHME/Application/LoginScreen/View/XipFile/TopImageLoginTableViewCell.xib
@@ -1,21 +1,44 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="23504" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="23506"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="TopImageLoginTableViewCell" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+        <tableViewCell contentMode="scaleToFill" restorationIdentifier="TopImageLoginTableViewCell" selectionStyle="default" indentationWidth="10" rowHeight="268" id="KGk-i7-Jjw" customClass="TopImageLoginTableViewCell" customModule="TENHME" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="401" height="268"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                <rect key="frame" x="0.0" y="0.0" width="401" height="268"/>
                 <autoresizingMask key="autoresizingMask"/>
+                <subviews>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="TopImageLogin" translatesAutoresizingMaskIntoConstraints="NO" id="pIi-R5-WI6">
+                        <rect key="frame" x="0.0" y="0.0" width="401" height="268"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="401" id="TQK-ro-RCj"/>
+                            <constraint firstAttribute="height" constant="268" id="cFl-fd-UsO"/>
+                        </constraints>
+                    </imageView>
+                </subviews>
+                <constraints>
+                    <constraint firstAttribute="trailing" secondItem="pIi-R5-WI6" secondAttribute="trailing" id="NwB-FS-wWa"/>
+                    <constraint firstItem="pIi-R5-WI6" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="O8U-30-v2c"/>
+                    <constraint firstItem="pIi-R5-WI6" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="WVm-42-R2G"/>
+                    <constraint firstAttribute="bottom" secondItem="pIi-R5-WI6" secondAttribute="bottom" id="kzv-6D-aQz"/>
+                    <constraint firstItem="pIi-R5-WI6" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="ouf-ah-WmP"/>
+                    <constraint firstItem="pIi-R5-WI6" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="xvP-2g-K0Z"/>
+                </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
+            <point key="canvasLocation" x="200.76335877862596" y="98.591549295774655"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <image name="TopImageLogin" width="1241" height="1122"/>
+    </resources>
 </document>
